# GrowNet

./: .gitignore  Cargo.toml  LICENSE  README.md  grownet.code-workspace  setup.md
.obsidian/: community-plugins.json  workspace  workspace.json
.obsidian/plugins/mermaid-tools/: data.json  main.js  manifest.json
assets/: arrow.stl
assets/config/: ui_config.ron
assets/configs/datasets/: mnist.ron
assets/configs/transforms/: normalize.ron
assets/shaders/: test_frag.wgsl
benches/: array.rs
c-src/: lib.cc
grownet/: Cargo.toml
grownet-models/: Cargo.toml
grownet-models/src/: lib.rs  main.rs  ops.rs
grownet-models/src/m1/: compute.rs  grid.rs  mod.rs
grownet-models/src/models/: baseline.rs  m1.rs  mod.rs  readme.md
grownet-models/src/tensor/: abstract_seq.rs  mod.rs  slice.rs
grownet-src/: Cargo.toml
grownet-src/src/: main.rs
grownet-src/src/m1/: compute.rs  mod.rs  readme.md
grownet-src/src/m2/: activations.rs  compute_matrix.rs  compute_node.rs  mod.rs  ops.rs  readme.md
grownet-src/src/renderer/: example.rs
grownet-src/src/tensor/: index.rs  index2.rs  mod.rs  slice.rs  tensor.rs  tensor2.rs
grownet-ui/: Cargo.toml
grownet-ui/src/: lib.rs
grownet-ui/src/visualizations/renderer/: render3d.rs
grownet/src/datasets/: mnist.rs
grownet_experiments/: Manifest.toml  Project.toml
grownet_experiments/src/: baseline.jl  grownet_experiments.jl  simple_grid.jl
grownet_experiments/src/old/: baseline2.jl
grownet_experiments/src/transformers/: llama.py
grownet_macro_core/: Cargo.toml
grownet_macro_core/src/: lib.rs  old.rs
grownet_macros/: Cargo.toml
grownet_macros/src/: lib.rs
grownet_models/: Cargo.toml
grownet_models/benches/: allocator.rs  fn_ptr.rs  simple_grid.rs
grownet_models/src/: allocator.rs  configs.rs  flatten.rs  grid_prof.rs  grid_prof2.rs  lib.rs  main.rs  ops.rs  temp.rs
grownet_models/src/ctx/: allocator.rs  array_alloc.rs  id_algebra.rs  mod.rs
grownet_models/src/datasets/: cifar.rs  data.rs  mnist.rs  mod.rs  transforms.rs
grownet_models/src/datasetsv2/: cifar10.rs  mod.rs  utils.rs
grownet_models/src/models/: baseline.rs  baselinev2.rs  baselinev3.rs  m1.rs  m2.rs  mod.rs
grownet_models/src/models/grid_like/: m0.rs  m0ctx.rs  mod.rs
grownet_models/src/nn/: mod.rs
grownet_models/src/nn/af_ops/: activations.rs  array_ops.rs  batchnorm2d.rs  conv.rs  initializer.rs  instancenorm.rs  loss.rs  maxpool.rs  mod.rs  sequential.rs  utils.rs
grownet_models/src/nn/nd_ops/: instancenorm.rs  mod.rs  utils.rs
grownet_models/src/nn/nd_ops/context/: block.rs  flat.rs  mod.rs  naive.rs
grownet_models/src/nn/nd_ops/ops_ctx/: mod.rs  norm.rs
grownet_models/src/nn/nd_ops/ops_owned/: mod.rs  norm.rs
grownet_models/src/nn/ops/: activations.rs  array_ops.rs  batchnorm2d.rs  conv.rs  initializer.rs  instancenorm.rs  instancenorm2d.rs  linear.rs  loss.rs  maxpool.rs  mod.rs  utils.rs
grownet_models/src/nn/parts/: mod.rs
grownet_ui/: Cargo.toml
grownet_ui/src/: lib.rs  main.rs  ops.rs  unused.rs
grownet_ui/src/data_configs/: mod.rs  transforms.rs
grownet_ui/src/datasets/: mod.rs
grownet_ui/src/model_configs/: baseline.rs  mod.rs  run_data.rs
grownet_ui/src/models_configs/: baseline.rs
grownet_ui/src/run_systems/: baseline.rs  mod.rs  plots.rs  run_data.rs
grownet_ui/src/run_systems/visualizations/renderer/: motion.rs
grownet_ui/src/ui/: data_ui.rs  mod.rs  train_ui.rs
grownet_ui/src/ui/train_ui/: mod.rs  run_data.rs  train_systems.rs
grownet_ui/src/visualizations/: mod.rs
grownet_ui/src/visualizations/renderer/: mod.rs  render3d.rs
julia-src/: compute.jl  grid.jl  main.jl  node.jl  simple_grid.jl  test.jl  test2.jl
julia-src/m1/: compute.jl  grid.jl  node.jl  test2.jl
kernels/: CMakeLists.txt  main.cc  main.jl  test2.jl  test3.jl
kernels/assets/config/: train_ui.config  ui_config.ron
kernels/m1/: compute.jl  grid.jl  node.jl  test2.jl
kernels/utils/: utils.h
models/: Cargo.toml
models/src/m2/: compute_matrix.rs
python/: test.py
python/backprop_t1/: convnext.py  stylegan2.py  train_loop.py
research/: AI Impact - common scenario.md  AI Impact.canvas  Main.md  Marvin Minsky - Connectionist vs Symbolic.md  Research direction.canvas  Subspace voting - interpretation of DNNs.md
src/: CMakeLists.txt  extension.cc  lib.rs  main.cc  main.rs  setup.py
src/datasets/: cifar.rs  mnist.rs  mod.rs  transforms.rs
src/m1/: compute.rs  grid.rs  indexing.rs  mod.rs
src/m2/: mod.rs  readme.md
src/models/: mod.rs
src/models/m2/: compute_node.rs
src/models/tensor/: index.rs  mod.rs  slice.rs  tensor.rs  tensorctx.rs
src/renderer/: meshes.rs  mod.rs  motion.rs  render3d.rs
src/tensor/: index2.rs  mod.rs  slice.rs  static_tensor.rs  tensor2.rs
src/ui/: data_ui.rs  dataset_ui.rs  mod.rs
src/ui/data_ui/: mnist.rs  mod.rs  viewers.rs
src/ui/data_ui_old/: viewers.rs
src/utils/: CMakeLists.txt  func_constructor.h  torch_utils.h  type_repr.h  utils.h
src/visualizations/renderer/: render3d.rs
src_old/data_ui_old/: mnist.rs  mod.rs
src_old/src/: lib.rs
src_old/src/datasets/: cifar.rs  transforms.rs
src_old/src/models/: mod.rs  ops.rs
src_old/src/models/m2/: ops.rs
src_old/src/models/tensor/: index.rs  tensor.rs
src_old/src/ui/: data_ui.rs  mod.rs
src_old/src/visualizations/renderer/: motion.rs
