[package]
name = "grownet-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grownet_lib"
path = "src/lib.rs"

[[bin]]
name = "grownet"
path = "src/main.rs"

[[bench]]
name = "array"
harness = false

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
num = "0.4"
ndarray = "0.15.0"
ndarray-rand = "0.14.0"
nalgebra = "0.31.3"
bevy = { version = "0.8.1" }
bevy-inspector-egui = "0.12.1"
rand = "0.8.5"
rand_distr = "0.4.3"

bencher = "0.1.5"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-args=-fuse-ld=/usr/local/mold"]