[package]
name = "grownet-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "grownet_lib"
path = "src/lib.rs"

[[bin]]
name = "grownet"
path = "src/main.rs"

[[bench]]
name = "array"
harness = false

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
num = "0.4"
ndarray = "0.15.0"
ndarray-rand = "0.14.0"
nalgebra = "0.31.3"
bevy = { version = "0.8.1" }
bevy-inspector-egui = "0.12.1"
bevy_stl = "0.6.0"
rand = "0.8.5"
rand_distr = "0.4.3"
crossbeam = "0.8.2"
bevy_egui = "0.16.1"
itertools = "0.10.5"
plotters = "0.3.4"
image = "0.24.5"
serde = "1.0.147"
ron = "0.8.0"
strum = {version = "0.24", features = ["derive"]}
anyhow = "1.0"

bencher = "0.1.5"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-args=-fuse-ld=/usr/local/mold"]