[package]
name = "grownet-src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3


[dependencies]
num = "0.4"
ndarray = "0.15.0"
ndarray-rand = "0.14.0"
bevy = { version = "0.8.1" }
bevy-inspector-egui = "0.12.1"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-args=-fuse-ld=/usr/local/mold"]