[package]
name = "grownet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "grownet_lib"
path = "src/lib.rs"

[[bin]]
name = "grownet"
path = "src/main.rs"


[dependencies]
ndarray = "0.15.0"
rand = "0.8.5"
ndarray-rand = "0.14.0"
rand_distr = "0.4.3"

bevy = { version = "0.8.1", features = ["dynamic"] }
bevy_egui = "0.16.1"
bevy-inspector-egui = "0.12.1"
bevy_stl = "0.6.0"

crossbeam = "0.8.2"
itertools = "0.10.5"
#plotters = "0.3.4"
image = "0.24.5"
serde = "1.0.147"
ron = "0.8.0"
anyhow = "1.0"