[package]
name = "grownet_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "model_lib"
path = "src/lib.rs"

[[bin]]
name = "grownet_models"
path = "src/main.rs"


[dependencies]
# grownet_macros = { path = "../grownet_macros" }
derivative = "2.2.0"
num = "0.4"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_distr = "0.4.3"
crossbeam = "0.8.2"
tch = "0.10.2"
#dfdx = { git = "https://github.com/coreylowman/dfdx", features = ["cuda", "nightly"] }
smallvec = "1.10.0"
anyhow = "1.0"
serde = "1.0.147"
ron = "0.8.0"
image = "0.24.5"
derive_more = "0.99.17"
burn = "0.5.0"
burn-ndarray = "0.5.0"
burn-autodiff = "0.5.0"
