[package]
name = "grownet_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "model_lib"
path = "src/lib.rs"

[[bin]]
name = "grownet_models"
path = "src/main.rs"

[[bench]]
name = "simple_grid"
harness = false

[dependencies]
grownet_macros = { path = "../grownet_macros" }
derivative = "2.2.0"
num = "0.4"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
rand_distr = "0.4.3"
crossbeam = "0.8.2"
smallvec = "1.10.0"
anyhow = "1.0"
serde = "1.0.147"
ron = "0.8.0"
image = "0.24.5"
derive_more = "0.99.17"
arrayfire = "3.8.0"
num-traits = "0.2.15"
half = "2.2.1"
curl = "0.4.44"
flate2 = "1.0.25"
byteorder = "1.4.3"
mnist = {version = "0.5.0", features = ["download"]}
cifar-ten = {version = "0.5.1", features = ["download"]}
itertools = "0.10.5"

[dev-dependencies]
criterion = "0.3"
